#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name          = "mon"
version       = "1.4.4"
description   = "MON covers a wide range of research topics in computer vision, machine learning, and deep learning."
license       = "MIT"
authors       = [
    "Long H. Pham <longpham3105@gmail.com>",
]
maintainers   = [
    "Long H. Pham <longpham3105@gmail.com>",
]
readme        = "README.md"
repository    = "https://github.com/phlong3105/one"
documentation = "https://github.com/phlong3105/one/docs"
keywords      = [
    "computer vision",
    "image processing",
    "deep learning",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    {include="mon",       from="src"},
    {include="mon_extra", from="src"},
]
include = [
    "LICENSE",
    "env/IgnoreList",
    "env/README.md",
    "env/docker.txt",
    "env/dockerfile",
    "env/linux_cmd.yaml",
    "env/linux_ui.yaml",
    "env/mac.yaml",
    "install.sh",
    "mkdocs.yml",
    "pyproject.toml",
]
exclude = []

[tool.poetry.dependencies]
python                = ">=3.11, <3.12"
cog                   = {version="*", optional=true}
easydict              = {version="*", optional=true}
guided-filter-pytorch = {version="*", optional=true}
hydra-core            = {version="*", optional=true}
kmeans_pytorch        = {version="*", optional=true}
mediapipe             = {version="*", optional=true}
pandas                = {version="*", optional=true}
supergradients        = {path="src/mon_extra/vision/multitask/supergradients", develop=true}
ultralytics           = {path="src/mon_extra/vision/multitask/ultralytics",    develop=true}
yolor                 = {path="src/mon_extra/vision/detect/yolor",             develop=true}
yolov7                = {path="src/mon_extra/vision/detect/yolov7",            develop=true}
yolov9                = {path="src/mon_extra/vision/detect/yolov9",            develop=true}

[tool.poetry.extras]
dev = [
    "kmeans_pytorch",
    "supergradients",
    "ultralytics",
    "yolor",
    "yolov7",
    "yolov9",
]
aic = [
    "cog",
    "guided-filter-pytorch",
    "hydra-core",
    "mediapipe",
    "pandas",
    "tensorflow",
    "torchfile",
    # "ultralytics",
]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Comments
#
# 1. Fix thop error: AttributeError: 'some_object' object has no attribute 'total_ops'
# pip install --upgrade git+https://github.com/sile/pytorch-OpCounter.git@8f115d4aeaee787d7347b75f30be28164b02ccaa
