#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name          = "mon"
version       = "1.4.9"
description   = "MON covers a wide range of research topics in computer vision, machine learning, and deep learning."
license       = "MIT"
authors       = [
    "Long H. Pham <longpham3105@gmail.com>",
]
maintainers   = [
    "Long H. Pham <longpham3105@gmail.com>",
]
readme        = "docs/README.md"
repository    = "https://github.com/phlong3105/mon"
documentation = "https://github.com/phlong3105/mon/docs"
keywords      = ["computer vision", "image processing", "deep learning", "research"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
packages      = [
    {include="mon",       from="src"},
    {include="mon_extra", from="src"},
]
include       = [
    ".gitignore",
    ".gitmodules",
    "LICENSE",
    "install.sh",
    "mkdocs.yml",
    "pyproject.toml",
    "rlsync.sh",
    # "env/IgnoreList",
    # "env/docker_script.txt",
    # "env/dockerfile",
    # "env/linux_console.yaml",
    # "env/linux_gui.yaml",
    # "env/macos.yaml",
    # "env/rename.sh",
    # "env/resilio-sync.service",
    {path="docs"},
    {path="env" },
]
exclude       = []

[tool.poetry.dependencies]
python            = ">=3.11, <3.13"
depth_anything_v2 = {path="src/mon_extra/vision/depth/depth_anything_v2", develop=true}
mobile_sam        = {path="src/mon_extra/vision/segment/mobile_sam"     , develop=true}
sam               = {path="src/mon_extra/vision/segment/sam"            , develop=true}
sam2              = {path="src/mon_extra/vision/segment/sam2"           , develop=true}
ultralytics       = {path="src/mon_extra/vision/ultralytics"            , develop=true}
yolor             = {path="src/mon_extra/vision/detect/yolor"           , develop=true}
yolov7            = {path="src/mon_extra/vision/detect/yolov7"          , develop=true}
yolov9            = {path="src/mon_extra/vision/detect/yolov9"          , develop=true}
yolox             = {path="src/mon_extra/vision/detect/yolox"           , develop=true}

[tool.poetry.extras]
dev = [
    "depth_anything_v2",
    "mobile_sam",
    "sam",
    "sam2",
    "ultralytics",
    "yolor",
    "yolov7",
    "yolov9",
    "yolox",
]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Comments
#
# 1. Fix thop error: AttributeError: 'some_object' object has no attribute 'total_ops'
# pip install --upgrade git+https://github.com/sile/pytorch-OpCounter.git@8f115d4aeaee787d7347b75f30be28164b02ccaa
