#                              _
#                           _ooOoo_
#                          o8888888o
#                          88" . "88
#                          (| -_- |)
#                          O\  =  /O
#                       ____/`---"\____
#                     ."  \\|     |//  `.
#                    /  \\|||  :  |||//  \
#                   /  _||||| -:- |||||_  \
#                   |   | \\\  -  /"| |   |
#                   | \_|  `\`---"//  |_/ |
#                   \  .-\__ `-. -"__/-.  /
#                 ___`. ."  /--.--\  `. ."___
#              ."" "<  `.___\_<|>_/___." _> \"".
#             | | :  `- \`. ;`. _/; ."/ /  ." ; |
#             \  \ `-.   \_\_`. _."_/_/  -" _." /
#   ===========`-.`___`-.__\ \___  /__.-"_."_.-"================
#                           `=--=-"
#

[metadata]
name = one
version = 1.1.0
description = One: One Research Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE.txt
author = Long H. Pham
author_email = longpham3105@gmail.com
url = https://github.com/phlong3105/one
project_urls =
    Bug Reports = https://github.com/phlong3105/one/issues
    Source = https://github.com/phlong3105/one
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    computer vision
    image processing
    machine learning

[options]
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    cython
    ffmpeg-python
    filterpy
    koila
    labelImg
    labelme
    Markdown
    matplotlib>=3.5.1
    mediapipe
    munch
    mypy
    multipledispatch
    ninja
    numpy
    opencv-python==4.4.0.46
    opencv-contrib-python==4.4.0.46
    opencv-python-headless==4.4.0.46        ;sys_platform=='darwin'
    opencv-contrib-python-headless==4.4.0.46;sys_platform=='darwin'
    ordered-enum
    pandas
    Pillow
    protobuf
    pycocotools>=2.0.4
    pydot
    PyQt5
    pytorch-lightning>=1.6.1
    pyvips; sys_platform=='darwin' or sys_platform=='linux'
    PyYAML
    pretrainedmodels
    ptflops
    rawpy
    requests
    rich
    scikit-learn
    scipy
    seaborn
    sortedcontainers
    setGPU
    tensorboard
    thop
    timm
    torch
    torchvision
    torchaudio
    torchmetrics
    torchsummary
    tqdm
    validators
    wandb
    xmltodict
dependency_links = https://download.pytorch.org/whl/cu113

[options.packages.find]
where=src

[options.package_data]
* = pretrained/**/*
