#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name          = "detpr"
version       = "1.1.0"
description   = "DETection PRoject: a codabase to test objection detection models."
license       = "MIT"
authors       = [
    "Long H. Pham <longpham3105@gmail.com>"
]
maintainers   = [
    "Long H. Pham <longpham3105@gmail.com>",
]
# readme        = "README.md"
# repository    = "https://github.com/phlong3105/one"
# documentation = "https://github.com/phlong3105/one/docs"
keywords      = ["core", "image processing"]
classifiers   = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include="src" },
]
include  = []
exclude  = []

[tool.poetry.dependencies]
python = ">=3.10"

# [tool.poetry.group.macos.dependencies]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
