#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name     = "ultralytics"
packages = [
    { include="ultralytics"},
]
include  = []
exclude  = []

[build-system]
requires      = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
