#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name        = "ultralytics"
version     = "8.0.29"
description = "YOLOv8 🚀 in PyTorch > ONNX > CoreML > TFLite"
license     = "MIT License"
authors     = [
    "G. Jocher",
    "A.Chaurasia",
    "J. Qiu"
]
packages = [
    {include="ultralytics"},
]
include  = []
exclude  = []

[build-system]
requires      = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
