#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name        = "abc"
version     = "0.1.0"
description = "An abstract package"
license     = "MIT License"
authors     = [
]
packages = [
    {include="*", "from"="."},
]
include  = []
exclude  = []

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
