#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name        = "ultralytics"
version     = "8.0.47"
description = "YOLOv8 🚀 in PyTorch > ONNX > CoreML > TFLite"
license     = "MIT License"
authors     = [
    "G. Jocher",
    "A.Chaurasia",
    "J. Qiu"
]
packages = [
    {include="ultralytics"},
]
include  = []
exclude  = []

# [tool.poetry.dependencies]
# Pillow         = "*"
# PyYAML         = "*"
# albumentations = "*"
# clearml        = "*"
# comet          = "*"
# ipython        = "*"
# matplotlib     = "*"
# numpy          = "*"
# opencv-python  = "*"
# pandas         = "*"
# psutil         = "*"
# pycocotools    = "*"
# requests       = "*"
# scipy          = "*"
# seaborn        = "*"
# thop           = "*"
# tqdm           = "*"

[build-system]
requires      = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
