#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name        = "yolor"
version     = "0.1.0"
description = "YOLOR"
license     = "MIT License"
authors     = [
]
packages = [
    {include="*"},
    # {include="utils"},
]
include  = []
exclude  = []

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
