#
#     /\_____/\
#    /  o   o  \
#   ( ==  ^  == )
#    )         (
#   (           )
#  ( (  )   (  ) )
# (__(__)___(__)__)
#
[tool.poetry]
name        = "saicinpainting"
version     = "1.0.0"
description = "LaMa: Resolution-robust Large Mask Inpainting with Fourier Convolutions"
license     = "Apache License"
authors     = [
    "Roman Suvorov",
    "Elizaveta Logacheva",
    "Anton Mashikhin",
    "Anastasia Remizova",
    "Arsenii Ashukha",
    "Aleksei Silvestrov",
    "Naejin Kong",
    "Harshith Goka",
    "Kiwoong Park",
    "Victor Lempitsky"
]
packages = [
    {include="saicinpainting"},
    {include="models"},
]
include  = []
exclude  = []

[build-system]
requires      = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
